--- a/frontend/src/Components/FloatingCart/FloatingCart.css
+++ b/frontend/src/Components/FloatingCart/FloatingCart.css
@@ -7,7 +7,7 @@
   border: none;
   padding: 16px;
   border-radius: 50%;
-  box-shadow: 0 8px 24px rgba(120, 235, 243, 0.4);
+  /* box-shadow: 0 8px 24px rgba(120, 235, 243, 0.4); */
   transition: all 0.3s;
   z-index: 50;
   animation: bounce 2s infinite;
